# mehsh

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs
src/integrations/: bevy.rs  obj.rs  petgraph.rs  stl.rs
src/mesh/: builder.rs  connectivity.rs  verify.rs
src/mesh/algo/: projection.rs  refine.rs  triangulate.rs
src/mesh/algo/location/: face.rs  vert.rs
src/mesh/elem/: edge.rs  face.rs  vert.rs
src/utils/: geom.rs  ids.rs  math.rs  primitives.rs
